# OGL-Game

./: CMakeLists.txt  CMakeUserPresets.json  ColorCube.dae  Cube.dae  Cube.fbx  Frag.glsl  Mesh.cpp  Mesh.h  OGL.cpp  OGL.h  README.md  Snowman.dae  Test.cpp  Todo  Vert.glsl  conanfile.txt
Models/: ColorCube.dae
Shaders/: Frag.glsl  Gemo.glsl  Vert.glsl
include/: Mesh.h  OGL.h
src/: Mesh.cpp  OGL.cpp  Test.cpp
